# Hydra

./: .dockerignore  .gitignore  BLUEPRINT.md  Cargo.toml  PROJECT_STATE.md  README.md
.github/workflows/: container-2node.yml  marathon.yml  tlc.yml
assets/: README.md
crates/hydra-coordinator/: Cargo.toml  build.rs
crates/hydra-coordinator/src/: boundary_store.rs  commit_stream.rs  event_log.rs  lib.rs  recovery.rs  server.rs  session.rs
crates/hydra-coordinator/tests/: commit_stream.rs  d1_recovery.rs  session_http.rs
crates/hydra-engine-sys/: Cargo.toml  build.rs
crates/hydra-engine-sys/csrc/: hydra_engine.cpp  hydra_engine.h
crates/hydra-engine-sys/src/: lib.rs
crates/hydra-engine-sys/tests/: bit_exact.rs
crates/hydra-proto/: Cargo.toml  README.md
crates/hydra-proto/schemas/: hydra-proto.fbs
crates/hydra-proto/src/: framing.rs  lib.rs  limits.rs  pos.rs  validate.rs
crates/hydra-sim/: Cargo.toml
crates/hydra-sim/examples/: catchrate.rs
crates/hydra-sim/src/: lib.rs  rng.rs  wal_disk.rs
crates/hydra-sim/tests/: dst.rs
crates/hydra-state/: Cargo.toml
crates/hydra-state/src/: coordinator.rs  invariants.rs  ledger.rs  lib.rs  segment.rs  stage.rs
crates/hydra-state/tests/: coordinator.rs  ledger.rs  recovery.rs  stage.rs  supersede.rs
crates/hydra-tokenizer/: Cargo.toml  build.rs
crates/hydra-tokenizer/src/: admission.rs  lib.rs  tokenizer.rs  utf8.rs
crates/hydra-tokenizer/tests/: tokenizer_engine.rs
crates/hydra-transport/: Cargo.toml  README.md
crates/hydra-transport/src/: framed.rs  lib.rs  tcp_mtls.rs  tls.rs
crates/hydra-transport/tests/: mtls.rs
crates/hydra-wal/: Cargo.toml
crates/hydra-wal/src/: effect_id.rs  file.rs  lib.rs  reader.rs  record.rs  writer.rs
crates/hydra-wal/tests/: torn_write.rs
crates/hydra-worker/: Cargo.toml  build.rs
crates/hydra-worker/src/: bootstrap.rs  durable.rs  lib.rs  pair.rs  retain.rs  sampler.rs  wire.rs  worker.rs
crates/hydra-worker/tests/: boundary_durability.rs  d1_recovery.rs  d1_two_stage.rs  durable_live.rs  forwarding_durable.rs  local_pair.rs  multiconn.rs  recovery.rs  relink.rs  sampler_pipeline.rs  single_worker.rs  survivor_reactivate.rs  three_node.rs  three_node_recovery.rs  wire_durability.rs
docker/: hydra-worker.Dockerfile
docs/: WAL-FORMAT.md  federated-llm-inference-report.md  heterogeneity.md  hydra-engine-sys-sketch.md  hydra-session-protocol.md  wal-records.fbs  wan-run.md
scripts/: gen-proto.sh
spike/: CMakeLists.txt  FINDINGS.md  README.md  llama-cpp-layer-window.patch  upstream-llama-issue.md
spike/src/: ref_logits.cpp  shard_split.cpp
verification/: BaselineLiveness.cfg  BaselineSafety.cfg  BaselineSafetyFast.cfg  HydraActivationCore.tla  M1-GATE.md  M2-GATE.md  Mut1Unservable.cfg  Mut2Reset.cfg  Mut3AttemptFence.cfg  Mut3Fast.cfg  Mut4AbortFinality.cfg  VERIFICATION-README.md  run-gate.sh  run-tlc.sh
verification/ci-results/: README.md  run-29222085672.md  run-29701630537.md
verification/smoke/: Mut2-CaseBPure.cfg  Mut4-AbortFinality.cfg
