[workspace]
resolver = "2"
members = [
    "crates/hydra-proto",
    "crates/hydra-wal",
    "crates/hydra-transport",
    "crates/hydra-state",
    "crates/hydra-sim",
]

[workspace.package]
version = "0.10.2"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
flatbuffers = "25"
blake3 = "1"
thiserror = "2"
