[package]
name = "hydra-state"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "PURE, synchronous Hydra state machines (coordinator + stage-session + activation transaction). No I/O, no clocks, no randomness. Mirrors HydraActivationCore.tla 1:1."

[dependencies]
blake3.workspace = true
hydra-proto = { path = "../hydra-proto" }

[features]
# Mutation-parity switches (M1 DoD): re-introduce the four TLA+ sabotages so the simulator
# can prove it catches each one. Default build is faithful (all guards on).
mutation_no_unservable = []   # Mut1: remove the ACTIVATION_UNSERVABLE/supersession path
mutation_label_reset = []     # Mut2: RESET_RECOVERY_ATTEMPT becomes a label-only r-bump
mutation_no_attempt_fence = [] # Mut3: disable activation_attempt_id fencing
mutation_no_abort_finality = [] # Mut4: allow COMPLETE after a durable ABORT (I25 off)
mutation_unservable_restart = [] # Mut5 (F-UNSERVABLE): omit the durable ACTIVATION_UNSERVABLE
                                 #   record in self.wal, so restart misclassifies out of the
                                 #   superseding window (the exact defect the WAL-codec cross-check
                                 #   found); the sim must re-find it (monotone-mutation rule)
mutation_candidate_leak = []     # Mut6 (I24): PREPARE_SEGMENT_CHECKPOINT installs the candidate into
                                 #   live sampler state pre-commit (installedCkpt becomes an
                                 #   uncommitted candidate), violating CandidateIsolation; the sim
                                 #   must catch it (monotone-mutation rule, P2·9)
